--- a/actuvoile.html
+++ b/actuvoile.html
@@ -94,24 +94,24 @@
        <p> Domique Rocheteau, ex footballeur internationnal, nous fait l'honneur d'être le parrain du bateau. 
       </p>
 <center>
-      <a href="images/actu/Bapteme/xx.jpg" ><img src="images/actu/Bapteme/xxx.jpg" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
+      <a href="images/actu/Bapteme/xx.jpg" ><img src="images/actu/Bapteme/xxx.JPG" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
 </center>
 
        <p> La cordée Bretonne, etait également présente, l'occasion pour nous de faire découvrir au gens l'essence de l'association.
       </p>
 <center>
-      <a href="images/actu/Bapteme/y.jpg" ><img src="images/actu/Bapteme/y.jpg" width=30% alt="Bap1" id="Bap1" class="photo" ></a>
+      <a href="images/actu/Bapteme/y.jpg" ><img src="images/actu/Bapteme/y.JPG" width=30% alt="Bap1" id="Bap1" class="photo" ></a>
 </center>
 
             <p> Dominique a cassé la bouteille de champagne, ca y est le bateau est fin prêt à naviguer !
       </p>
       <center> 
-      <a href="images/actu/Bapteme/xxx.jpg" ><img src="images/actu/Bapteme/xx.jpg" width=40% alt="Bap3" id="Bap3" class="photo" ></a>
-      <a href="images/actu/Bapteme/xxxx.jpg" ><img src="images/actu/Bapteme/zzz.jpg" width=40% alt="Bap4" id="Bapt4" class="photo" ></a>
+      <a href="images/actu/Bapteme/xxx.jpg" ><img src="images/actu/Bapteme/xx.JPG" width=40% alt="Bap3" id="Bap3" class="photo" ></a>
+      <a href="images/actu/Bapteme/xxxx.jpg" ><img src="images/actu/Bapteme/zzz.JPG" width=40% alt="Bap4" id="Bapt4" class="photo" ></a>
 </center>
       <center> 
-      <a href="images/actu/Bapteme/yyyy.jpg" ><img src="images/actu/Bapteme/yyyy.jpg" width=30% alt="Bap3" id="Bap3" class="photo" ></a>
-      <a href="images/actu/Bapteme/yy.jpg" ><img src="images/actu/Bapteme/yy.jpg" width=30% alt="Bap4" id="Bapt4" class="photo" ></a>
+      <a href="images/actu/Bapteme/yyyy.jpg" ><img src="images/actu/Bapteme/yyyy.JPG" width=30% alt="Bap3" id="Bap3" class="photo" ></a>
+      <a href="images/actu/Bapteme/yy.jpg" ><img src="images/actu/Bapteme/yy.JPG" width=30% alt="Bap4" id="Bapt4" class="photo" ></a>
 </center>
 <p>Merci à tous ceux qui sont passés, ceux qui n'ont pu faire le déplacement mais qui était présent dans nos coeurs.</p>
 <p>Prochaine événment : Le spiOuestFrance</p>
