--- a/cordeebretonne.html
+++ b/cordeebretonne.html
@@ -85,7 +85,7 @@ La Cordée Bretonne est également présente auprès des familles d’enfants ho
         <center>
           <div class="galerie">
 
-            <a href="images/cordee2.jpg" ><img src="images/cordee2.jpg" width=70% alt="cordee2" id="cordee2" class="photo" ></a>
+            <a href="images/cordee2.jpg" ><img src="../images/cordee2.jpg" width=70% alt="cordee2" id="cordee2" class="photo" ></a>
 
 
 <p>
