--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ sébastien.soupey@orange.fr
 +33 6  14 98 39 88
         </p>
                 <p>
-amarevery@hotmail.com
+adele.marevery@hotmail.fr
         </p>
         </div>
 </center>
