--- a/acse.html
+++ b/acse.html
@@ -155,7 +155,7 @@ Depuis 2015, Sébastien, part chaque été pour faire des vidéos des stages enf
   </div>
 </main>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/app.js"></script>
 
 </body>
