--- a/actuvoile.html
+++ b/actuvoile.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0">
 
-  <title>EoLifT - Actualité</title>
+  <title>EoLifT - Presentation</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/modernizr.js"></script>
 
@@ -27,7 +27,7 @@
           <center>
           <a href="https://www.youtube.com/channel/UC1ZILONK77gBwE5Bn3td3TA?view_as=subscriber" class="youtube">Youtube</a>
           <a href="https://www.facebook.com/hugo.feydit" class="facebook">Facebook</a>
-</center>
+          </center>
         </div>
 
       </div>
@@ -94,30 +94,31 @@
        <p> Domique Rocheteau, ex footballeur internationnal, nous fait l'honneur d'être le parrain du bateau. 
       </p>
 <center>
-      <a href="images/actu/Bapteme/xx.JPG" ><img src="images/actu/Bapteme/xxx.JPG" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
+      <a href="images/actu/Bapteme/xx.jpg" ><img src="images/actu/Bapteme/xxx.jpg" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
 </center>
 
        <p> La cordée Bretonne, etait également présente, l'occasion pour nous de faire découvrir au gens l'essence de l'association.
       </p>
 <center>
-      <a href="images/actu/Bapteme/y.JPG" ><img src="images/actu/Bapteme/y.JPG" width=30% alt="Bap1" id="Bap1" class="photo" ></a>
+      <a href="images/actu/Bapteme/y.jpg" ><img src="images/actu/Bapteme/y.jpg" width=30% alt="Bap1" id="Bap1" class="photo" ></a>
 </center>
 
             <p> Dominique a cassé la bouteille de champagne, ca y est le bateau est fin prêt à naviguer !
       </p>
       <center> 
-      <a href="images/actu/Bapteme/xxx.JPG" ><img src="images/actu/Bapteme/xx.JPG" width=40% alt="Bap3" id="Bap3" class="photo" ></a>
-      <a href="images/actu/Bapteme/xxxx.JPG" ><img src="images/actu/Bapteme/zzz.JPG" width=40% alt="Bap4" id="Bapt4" class="photo" ></a>
+      <a href="images/actu/Bapteme/xxx.jpg" ><img src="images/actu/Bapteme/xx.jpg" width=40% alt="Bap3" id="Bap3" class="photo" ></a>
+      <a href="images/actu/Bapteme/xxxx.jpg" ><img src="images/actu/Bapteme/zzz.jpg" width=40% alt="Bap4" id="Bapt4" class="photo" ></a>
 </center>
       <center> 
-      <a href="images/actu/Bapteme/yyyy.JPG" ><img src="images/actu/Bapteme/yyyy.JPG" width=30% alt="Bap3" id="Bap3" class="photo" ></a>
-      <a href="images/actu/Bapteme/yy.JPG" ><img src="images/actu/Bapteme/yy.JPG" width=30% alt="Bap4" id="Bapt4" class="photo" ></a>
+      <a href="images/actu/Bapteme/yyyy.jpg" ><img src="images/actu/Bapteme/yyyy.jpg" width=30% alt="Bap3" id="Bap3" class="photo" ></a>
+      <a href="images/actu/Bapteme/yy.jpg" ><img src="images/actu/Bapteme/yy.jpg" width=30% alt="Bap4" id="Bapt4" class="photo" ></a>
 </center>
 <p>Merci à tous ceux qui sont passés, ceux qui n'ont pu faire le déplacement mais qui était présent dans nos coeurs.</p>
 <p>Prochaine événment : Le spiOuestFrance</p>
       </div>
       <div class="clear"></div>
     </div>    
+
 
 <!-- FIN ARTICLE -->
 
@@ -175,10 +176,14 @@
   </div>
 </div>
 
+<script src="js/jquery.min.js"></script>
+<script src="js/app.js"></script>
+
+
+</main>
+
 </body>
-
-
-  </main>
+</html>
 
 
 
