--- a/cordeebretonne.html
+++ b/cordeebretonne.html
@@ -85,7 +85,7 @@ La Cordée Bretonne est également présente auprès des familles d’enfants ho
         <center>
           <div class="galerie">
 
-            <a href="images/cordee2.JPG" ><img src="../images/cordee2.JPG" width=70% alt="cordee2" id="cordee2" class="photo" ></a>
+            <a href="images/cordee2.jpg" ><img src="images/cordee2.jpg" width=70% alt="cordee2" id="cordee2" class="photo" ></a>
 
 
 <p>
@@ -114,7 +114,7 @@ C'est convoitement avec la cordée bretone que nous alons d'organiser des sortie
   </div>
 </main>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/app.js"></script>
 
 </body>
