--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ sébastien.soupey@orange.fr
 +33 6  14 98 39 88
         </p>
                 <p>
-adele.marevery@hotmail.fr
+amarevery@hotmail.com
         </p>
         </div>
 </center>
@@ -106,6 +106,8 @@ adele.marevery@hotmail.fr
   </div>
 </main>
 
+<script src="js/jquery.min.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 
