--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/modernizr.js"></script>
 
-
-
 </head>
 <body>
   <main class="wrap group">
@@ -88,7 +86,7 @@ EoLifT veut vous  permettre  de choisir  et de réaliser   le projet voile de vo
   </div>
 </main>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/app.js"></script>
 
 </body>
