--- a/partenaire.html
+++ b/partenaire.html
@@ -89,8 +89,8 @@
 
   </main>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="js/app-membres.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 
