--- a/actuvoile.html
+++ b/actuvoile.html
@@ -136,7 +136,7 @@
         <p><a href="./images/actu/invit.jpg"><img class="wp-image-242 aligncenter" src="./images/actu/InvitBapteme/Invitation.jpg" alt="invit" width="400"></a></p>
         <p></p>
         <center>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/yxfhOZOCGYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width=40% src="https://www.youtube.com/embed/yxfhOZOCGYs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
         </center>
@@ -161,7 +161,7 @@
         <p>Quand tu mixes voile, prépa physique et #stayhome challenge ça donne ça : </p>
         <p></p>
         <center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/UdTjePspziQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width=40% src="https://www.youtube.com/embed/UdTjePspziQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         </center>
         <p></p>
