--- a/resultatvoile.html
+++ b/resultatvoile.html
@@ -101,7 +101,7 @@
   
 <script src="js/jquery.min.js"></script>
 <script src="js/app.js"></script>
-
+<script src="js/app-membres.js"></script>
 </body>
 
 </html>
