--- a/resultatvoile.html
+++ b/resultatvoile.html
@@ -102,6 +102,7 @@
   
 <script src="js/jquery.min.js"></script>
 <script src="js/app.js"></script>
+<script src="js/app-membres.js"></script>
 
 </body>
 
