--- a/equipevoile.html
+++ b/equipevoile.html
@@ -84,7 +84,7 @@
 
 							<li> <span>Communication</span>
 								<ul>
-									<li id="Adele" class="membre2">Marevery Adèle</li>
+									<li id="adou" class="membre2">Marevery Adèle</li>
 								</ul>
 							</li>
 						</ul>
