--- a/equipevoile.html
+++ b/equipevoile.html
@@ -86,15 +86,17 @@
 								<ul>
 									<li id="adou" class="membre2">Marevery Adèle</li>
 								</ul>
+
 							</li>
 						</ul>
 
 					</div>
-				</header>
 
-				<div class="content-image">
-					<img src="images/photos/groupe.jpg" alt=" " id="photo" hidden="true">
-				</div>                
+									<div class="content-image">
+					<img src="images/photos/groupe.jpg" alt=" " id="photo2" hidden="false">
+				</div>   
+				</header>
+             
 			</article>
 
 		</div>
