--- a/resultatvoile.html
+++ b/resultatvoile.html
@@ -85,15 +85,23 @@
         <div class="description">
         <li id="SB20" class="membre2">4ème overall</li>
         <li id="SB20-2" class="membre2">Coupe des Nations</li>
+
+                <img src="images/voile/membres/SB20-2.jpg" width=90% alt=" " id="photo2"></a>
+
         </div>
+
+
+
 <!-- FIN COMPET -->
+
+        <div class="content-image">
+          <img src="images/photos/adele.jpg" alt=" " id="photo" hidden="true">
+        </div>     
 
       </header>   
 
 
-        <div class="content-image">
-          <img src="images/photos/adele.jpg" alt=" " id="photo" hidden="true">
-        </div>                
+           
       </article>
 
     </article>       
