--- a/equipevoile.html
+++ b/equipevoile.html
@@ -85,16 +85,19 @@
 							<li> <span>Communication</span>
 								<ul>
 									<li id="adou" class="membre2">Marevery Adèle</li>
+
+
+
 								</ul>
-
 							</li>
-						</ul>
 
+						</ul>
+									<img src="images/voile/membres/hugo.jpg" width=90% alt=" " id="photo2"></a>
 					</div>
 
-									<div class="content-image">
-					<img src="images/photos/groupe.jpg" alt=" " id="photo2" hidden="false">
-				</div>   
+					<div class="content-image">
+					<img src="images/photos/groupe.jpg" alt=" " id="photo" hidden="false">
+					</div>   
 				</header>
              
 			</article>
