--- a/actuvoile.html
+++ b/actuvoile.html
@@ -19,7 +19,7 @@
       <div class="my-info">
 
 
-        <img src="images/EOLIFT_logo.png" alt="EoLitT" width="150" height="50" class="sidebar-image">
+        <img src="images/EOLIFT_logo.png" alt="EoLifT" width="150" height="50" class="sidebar-image">
         <h1><strong>EoLitT</strong></h1>
         <h2>Sailing Team</h2>
 
@@ -98,7 +98,7 @@
       <a href="images/actu/Bapteme/xx.JPG" ><img src="images/actu/Bapteme/xxx.JPG" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
 </center>
 
-       <p> La cordée Bretonne, etait également présente, l'occasion pour nous de faire découvrir au gens l'essence de l'association.
+       <p> La cordée Bretonne, était également présente, l'occasion pour nous de faire découvrir aux invités les missions de l'association.
       </p>
 <center>
       <a href="images/actu/Bapteme/y.JPG" ><img src="images/actu/Bapteme/y.JPG" width=30% alt="Bap1" id="Bap1" class="photo" ></a>
