--- a/cordeebretonne.html
+++ b/cordeebretonne.html
@@ -20,7 +20,7 @@
       <div class="my-info">
 
 
-        <img src="images/EOLIFT_logo.png" alt="EoLitT" width="150" height="50" class="sidebar-image">
+        <img src="images/EOLIFT_logo.png" alt="EoLifT" width="150" height="50" class="sidebar-image">
         <h1><strong>EoLitT</strong></h1>
         <h2>Sailing Team</h2>
 
@@ -95,7 +95,7 @@ Sylvie Berneau, tresorière de la cordée, présente au baptème du bateau.
        </center>
 
 <p>
-C'est convoitement avec la cordée bretone que nous alons d'organiser des sorties en mer pour les enfants atteint du cancer et les bénévoles de l'association, dans le but de partagé un moment enrichissant avec les familles sur l'eau.
+C'est conjointement avec la cordée bretone que nous allons organiser des sorties en mer pour les enfants en rémission du cancer et les bénévoles de l'association, dans le but de partager un moment enrichissant avec les familles sur l'eau.
 </p>
 
 
