--- a/equipevoile.html
+++ b/equipevoile.html
@@ -22,7 +22,7 @@
 
 
 
-        <img src="images/EOLIFT_logo.png" alt="EoLitT" width="150" height="50" class="sidebar-image">
+        <img src="images/EOLIFT_logo.png" alt="EoLifT" width="150" height="50" class="sidebar-image">
         <h1><strong>EoLitT</strong></h1>
         <h2>Sailing Team</h2>
 
