--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="my-info">
 
 
-        <img src="images/EOLIFT_logo.png" alt="EoLitT" width="150" height="50" class="sidebar-image">
+        <img src="images/EOLIFT_logo.png" alt="EoLifT" width="150" height="50" class="sidebar-image">
         <h1><strong>EoLitT</strong></h1>
         <h2>Sailing Team</h2>
 
