--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          EoLifT est une association incubatrice d'aventure en mer.
           </p>
                 <p>
-EoLifT veut vous  permettre  de choisir  et de réaliser   le projet voile de votre choix  parmi  les  deux présentés ci-dessous et de le faire vivre tout en portant vos couleurs
+EoLifT veut vous  permettre  de choisir  et de réaliser   le projet voile de votre choix et de le faire vivre tout en portant vos couleurs
 </p>
 <p>A l'origine de cette ambition, Hugo FEYDIT et Sébastien SOUPEY. Depuis notre rencontre sur les bancs de l’école d’ingénieur (l'ENSEIRB-MATMECA à Bordeaux) nous avons partagé des aventures nombreuses et variées, jusqu'à naviguer aux premières places des championnats internationaux.</p>
   <p>En 2020, malgrès la saison réduite nous lancons le projet sous les couleurs de l'association : A Chacun Son Everest ! et de son relai breton : La cordée bretonne dans le but de démarer un projet sur le long terme !</p>
