--- a/partenaire.html
+++ b/partenaire.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0">
 
-  <title>EolifT - Plaquette</title>
+  <title>EolifT - Partenaires</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/modernizr.js"></script>
 
