--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ EoLifT veut vous  permettre  de choisir  et de réaliser   le projet voile de vo
 </p>
 <p>A l'origine de cette ambition, Hugo FEYDIT et Sébastien SOUPEY. Depuis notre rencontre sur les bancs de l’école d’ingénieur (l'ENSEIRB-MATMECA à Bordeaux) nous avons partagé des aventures nombreuses et variées, jusqu'à naviguer aux premières places des championnats internationaux.</p>
   <p>En 2020, malgrès la saison réduite nous lancons le projet sous les couleurs de l'association : A Chacun Son Everest ! et de son relai breton : La cordée bretonne dans le but de démarer un projet sur le long terme !</p>
+  <p>Si nous avons choisi de porter les couleurs de cette association, c'est pour les valeurs qu'elle transmet et suite à un vécu personnel et l'envi de faire les remercier.</p>
+  <p>Notre envie : pouvoir faire perdurer le projet. Pour cela nous avons besoin de partenaires. Pour tout renseignement, <a href="contact.html" class="telephone">contacter nous</a></p>
 
           <a href="images/presentation1.jpg" ><img src="images/presentation1.jpg" width=100% alt="Thumbnail" id="presentation1.png" class="photo" ></a>
       </header>
