--- a/actuvoile.html
+++ b/actuvoile.html
@@ -94,6 +94,10 @@
        </p>
         <p>Sous le soleil breton, nous avons pu montrer pour le premier fois le Diam au couleur de l'association A Chacun son Everest !. Cette association qui nous tient 
         a coeur sera présente sur le bateau toute la saison. </p>
+        <center> 
+          <a href="images/actu/Bapteme/bapt10.png" ><img src="images/actu/Bapteme/bapt10.png" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
+          <a href="images/actu/Bapteme/bapt11.png" ><img src="images/actu/Bapteme/bapt11.png" width=30% alt="Bap2" id="Bap2" class="photo" ></a>
+</center>
        <p>Domique Rocheteau, ex footballeur internationnal, nous fait l'honneur d'être le parrain du bateau. 
       </p>
 <center>
