--- a/partenaire.html
+++ b/partenaire.html
@@ -70,7 +70,8 @@
      <article class="content-item group first">
        <header class="content-info4">
 <center>
-        <p>Ils nous soutiennent et nous les remerciont : </p>
+      <p>Nous sommes actuellement en recherche de partenaire. Pour partager l'aventure avec nous, n'héstitez pas à nous contacter !
+        <p>Ils nous soutiennent dèjà et nous les remerciont : </p>
 
           <a href="images/partenaires/avenir.jpg" ><img src="images/partenaires/avenir.jpg" width=25% alt="Thumbnail" id="partenaires/avenir" class="photo" ></a>
 
