--- a/actuvoile.html
+++ b/actuvoile.html
@@ -117,9 +117,9 @@
       <a href="images/actu/Bapteme/xxxx.JPG" ><img src="images/actu/Bapteme/zzz.JPG" width=40% alt="Bap4" id="Bapt4" class="photo" ></a>
 </center>
       <center>
-      <a href="images/actu/Bapteme/yyyy.JPG" ><img src="images/actu/Bapteme/yyyy.JPG" width=30% alt="Bap3" id="Bap3" class="photo" ></a>
+      <a href="images/actu/Bapteme/yy.JPG" ><img src="images/actu/Bapteme/yy.JPG" width=30% alt="Bap3" id="Bap3" class="photo" ></a>
         <p>Retour en vidéo : </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/sTDhCDwzzW0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width=40% src="https://www.youtube.com/embed/sTDhCDwzzW0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 <p>Merci à tous ceux qui sont passés, ceux qui n'ont pu faire le déplacement mais qui était présent dans nos coeurs.</p>
 <p>Prochaine événment : Le spiOuestFrance</p>
