--- a/cordeebretonne.html
+++ b/cordeebretonne.html
@@ -90,12 +90,12 @@ La Cordée Bretonne est également présente auprès des familles d’enfants ho
 
 
 <p>
-Sylvie Berneau, tresorière de la cordée, présente au baptème du bateau.
+Sylvie Berneau, trésorière de la cordée, présente au baptême du bateau.
 </p>
        </center>
 
 <p>
-C'est conjointement avec la cordée bretone que nous allons organiser des sorties en mer pour les enfants en rémission du cancer et les bénévoles de l'association, dans le but de partager un moment enrichissant avec les familles sur l'eau.
+C'est conjointement avec la cordée bretonne que nous allons organiser des sorties en mer pour les enfants en rémission du cancer et les bénévoles de l'association, dans le but de partager un moment enrichissant avec les familles sur l'eau.
 </p>
 
 
