--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
         <div class="title">Une équipe motivée</div>
         <div class="description">
           <p>
-         EoLifT est une association incubatrice d'aventure en mer.
+         EoLifT est une association incubatrice d'aventures en mer.
           </p>
                 <p>
-EoLifT veut vous  permettre  de choisir  et de réaliser   le projet voile de votre choix et de le faire vivre tout en portant vos couleurs
+EoLifT veut vous  permettre  de choisir  et de réaliser   le projet voile de votre choix et de le faire vivre tout en portant vos couleurs.
 </p>
 <p>A l'origine de cette ambition, Hugo FEYDIT et Sébastien SOUPEY. Depuis notre rencontre sur les bancs de l’école d’ingénieur (l'ENSEIRB-MATMECA à Bordeaux) nous avons partagé des aventures nombreuses et variées, jusqu'à naviguer aux premières places des championnats internationaux.</p>
-  <p>En 2020, malgré la saison réduite nous lançons le projet sous les couleurs de l'association : A Chacun Son Everest ! et de son relai breton : La cordée bretonne dans le but de démarrer un projet sur le long terme !</p>
+  <p>En 2020, malgré la saison réduite nous lançons le projet sous les couleurs de l'association : A Chacun Son Everest ! et de son relais breton : La cordée bretonne dans le but de démarrer un projet sur le long terme !</p>
           <center>
           <a href="images/diam.jpg" ><img src="images/diam.jpg" width=50% alt="Thumbnail" id="presentation1.png" class="photo" ></a>
           </center>
           <p>Nous avons choisi de porter les couleurs de cette association, pour notre vécu personnel et pour les valeurs qu'elle transmet.</p>
-  <p>Notre envie : pouvoir faire perdurer le projet. Pour cela nous avons besoin de partenaires. Pour tous renseignements, <a href="contact.html" class="telephone">contacter nous</a></p>
+  <p>Notre envie : pouvoir développer et faire perdurer le projet. Pour cela nous avons besoin de partenaires. Pour tous renseignements, <a href="contact.html" class="telephone">contacter nous</a></p>
 
 
           <center>
