--- a/acse.html
+++ b/acse.html
@@ -141,7 +141,7 @@ Depuis 2015, Sébastien, part chaque été pour faire des vidéos des stages enf
           </div>
         </center>
 
-<center><p><strong>Partager des valeurs fortes, liées la mer et la montagne, sont d'autant de point qui font d'A Chacun Son Everest ! de l'association avec le bateau une évidence.</strong></p></center>
+<center><p><strong>Partager des valeurs fortes, lier la mer et la montagne, sont d'autant de points qui font de l'association d'A Chacun Son Everest ! avec le bateau une évidence.</strong></p></center>
 
         <center>
           <div class="galerie">
