--- a/partenaire.html
+++ b/partenaire.html
@@ -39,6 +39,7 @@
         <h3 class="general">Général</h3>
         <ul>
           <li><a href="index.html" class="presentation">Présentation</a></li>
+                    <li><a href="plaquette.html" class="liens">La plaquette</a></li>
         </ul>
 
         <h3 class="Voile">voile</h3>
@@ -57,7 +58,7 @@
         <h3 class="contact">Autre</h3>
         <ul>
           <li><a href="contact.html" class="telephone">Contact</a></li>
-          <li><a href="plaquette.html" class="liens">La plaquette</a></li>
+
           <li><a href="partenaire.html" class="current-menu-item  services">Les partenaires</a></li>
         </ul>
 </ul>
@@ -70,7 +71,7 @@
      <article class="content-item group first">
        <header class="content-info4">
 <center>
-      <p>Nous sommes actuellement en recherche de partenaire. Pour partager l'aventure avec nous, n'hésitez pas à nous contacter !
+      <p>Nous sommes actuellement en recherche de partenaires. Pour partager l'aventure avec nous, n'hésitez pas à nous contacter !
         <p>Ils nous soutiennent déjà et nous les remercions : </p>
 
           <a href="images/partenaires/avenir.jpg" ><img src="images/partenaires/avenir.jpg" width=25% alt="Thumbnail" id="partenaires/avenir" class="photo" ></a>
