--- a/acse.html
+++ b/acse.html
@@ -141,7 +141,7 @@ Depuis 2015, Sébastien, part chaque été pour faire des vidéos des stages enf
           </div>
         </center>
 
-<center><p><strong>Partager des valeurs fortes, lier la mer et la montagne, sont d'autant de points qui rendent l'association entre A Chacun Son Everest ! et le projet évidente</strong></p></center>
+<center><p><strong>Partager des valeurs fortes, lier la mer et la montagne, sont d'autant de points qui rendent l'association entre A Chacun Son Everest ! et le projet évidente.</strong></p></center>
 
         <center>
           <div class="galerie">
