--- a/equipevoile.html
+++ b/equipevoile.html
@@ -29,7 +29,7 @@
         <div class="social group">
           <center>
           <a href="https://www.youtube.com/channel/UC1ZILONK77gBwE5Bn3td3TA?view_as=subscriber" class="youtube">Youtube</a>
-          <a href="https://www.facebook.com/hugo.feydit" class="facebook">Facebook</a>
+          <a href="https://www.facebook.com/A-chacun-son-Everest-Sailing-Team-101953578323582" class="facebook">Facebook</a>
 </center>
         </div>
 
@@ -41,7 +41,7 @@
         <h3 class="general">Général</h3>
         <ul>
           <li><a href="index.html" class="presentation">Présentation</a></li>
-          <li><a href="plaquette.html" class="liens">La plaquette</a></li>
+          <li><a href="plaquette.html" class="liens">Le projet</a></li>
         </ul>
 
         <h3 class="Voile">voile</h3>
