--- a/plaquette.html
+++ b/plaquette.html
@@ -39,7 +39,7 @@
         <h3 class="general">Général</h3>
         <ul>
           <li><a href="index.html" class="presentation">Présentation</a></li>
-          <li><a href="plaquette.html" class="current-menu-item  liens">Le project</a></li>
+          <li><a href="plaquette.html" class="current-menu-item  liens">Le projet</a></li>
         </ul>
 
         <h3 class="Voile">voile</h3>
