--- a/plaquette.html
+++ b/plaquette.html
@@ -83,7 +83,7 @@
           <a href="images/plaquette/p8.png" ><img src="images/plaquette/p8.png" width=100% alt="Thumbnail" id="plaquette/p8.png" class="photo" ></a>
           <a href="images/plaquette/p9.png" ><img src="images/plaquette/p9.png" width=100% alt="Thumbnail" id="plaquette/p9.png" class="photo" ></a>
           <a href="images/plaquette/p10.png" ><img src="images/plaquette/p10.png" width=100% alt="Thumbnail" id="plaquette/p10.png" class="photo" ></a>
-
+          <a href="images/plaquette/p11.png" ><img src="images/plaquette/p11.png" width=100% alt="Thumbnail" id="plaquette/p11.png" class="photo" ></a>
 </center>
 
 </center>
