--- a/plaquette.html
+++ b/plaquette.html
@@ -27,7 +27,7 @@
         <div class="social group">
           <center>
           <a href="https://www.youtube.com/channel/UC1ZILONK77gBwE5Bn3td3TA?view_as=subscriber" class="youtube">Youtube</a>
-          <a href="https://www.facebook.com/A-chacun-son-Everest-Sailing-Team-101953578323582" class="facebook">Facebook</a>
+          <a href="https://www.facebook.com/EoLiftTRacing/" class="facebook">Facebook</a>
 </center>
         </div>
 
