--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="social group">
           <center>
           <a href="https://www.youtube.com/channel/UC1ZILONK77gBwE5Bn3td3TA?view_as=subscriber" class="youtube">Youtube</a>
-          <a href="https://www.facebook.com/EoLiftTRacing/" class="facebook">Facebook</a>
+          <a href="https://www.facebook.com/EoLifTRacing/" class="facebook">Facebook</a>
 </center>
         </div>
 
